package domain.core.address

case class Address(prefecture: String)
