package domain.core.mail_address

case class MailAddress(value: String)
