package domain.core.user

case class UserId(value: String)
